# docs/swagger.json
@@ -233,7 +233,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/models.User"
+                            "$ref": "#/definitions/models.UserWithPassword"
                         }
                     }
                 ],
@@ -241,7 +241,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/models.User"
+                            "$ref": "#/definitions/models.UserWithPassword"
                         }
                     },
                     "400": {
@@ -408,6 +408,27 @@
             }
         },
         "models.User": {
+            "type": "object",
+            "properties": {
+                "age": {
+                    "type": "integer"
+                },
+                "email": {
+                    "type": "string"
+                },
+                "name": {
+                    "description": "Password string     `json:\"-\"`",
+                    "type": "string"
+                },
+                "sex": {
+                    "$ref": "#/definitions/models.SexType"
+                },
+                "status": {
+                    "$ref": "#/definitions/models.StatusType"
+                }
+            }
+        },
+        "models.UserWithPassword": {
             "type": "object",
             "properties": {
                 "age": {
